--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tabit/bdd-utils",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "utility functions for working with cucumber-js ",
   "main": "index.js",
   "scripts": {
@@ -17,13 +17,13 @@
   },
   "homepage": "https://github.com/inPact/bdd-utils#readme",
   "dependencies": {
-    "@tabit/utils": "^1.2.2",
+    "@tabit/utils": "../utils/",
     "bluebird": "3.5.0",
     "chai": "3.4.1",
     "chalk": "1.1.3",
     "debug": "latest",
     "json5": "0.5.1",
-    "lodash": "3.10.1",
+    "lodash": "^4.17.11",
     "moment-timezone": "0.5.17",
     "xml2js": "0.4.15"
   },
