--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "utility functions for working with cucumber-js ",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
