--- a/package.json
+++ b/package.json
@@ -17,13 +17,13 @@
   },
   "homepage": "https://github.com/inPact/bdd-utils#readme",
   "dependencies": {
-    "@tabit/utils": "^2.1.0",
+    "@tabit/utils": "^3.0.0",
     "bluebird": "3.5.0",
     "chai": "3.4.1",
     "chalk": "1.1.3",
     "debug": "latest",
     "json5": "0.5.1",
-    "lodash": "^4.17.11",
+    "lodash": "3.10.1",
     "moment-timezone": "0.5.17",
     "xml2js": "0.4.15"
   },
