--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tabit/bdd-utils",
-  "version": "2.0.0",
+  "version": "2.1.0",
   "description": "utility functions for working with cucumber-js ",
   "main": "index.js",
   "scripts": {
@@ -24,6 +24,7 @@
     "debug": "latest",
     "json5": "0.5.1",
     "lodash": "3.10.1",
+    "moment": "^2.24.0",
     "moment-timezone": "0.5.17",
     "xml2js": "0.4.15"
   },
